<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Categories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:padding="1dp"
            android:text="@string/categories"
            android:textAllCaps="true"
            android:textSize="30sp" />


        <!--  1st  -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/red">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/texture" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:padding="10dp"
                    android:text="@string/category_1"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/baloo"
                    android:onClick="buttonExpandAll"
                    android:padding="20dp"
                    android:text="@string/expand_all" />


            </RelativeLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-1sp"
                android:src="@drawable/car" />

        </RelativeLayout>

        <!--  2nd  -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/black">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/texture" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/baloo"
                    android:padding="10dp"
                    android:text="@string/category_2"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/baloo"
                    android:onClick="buttonExpandAll"
                    android:padding="20dp"
                    android:text="@string/expand_all" />


            </RelativeLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="-1sp"
                android:src="@drawable/laptop" />

        </RelativeLayout>

        <!-- 3rd   -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/darkblue">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/texture" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:padding="10dp"
                    android:text="@string/category_3"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/baloo"
                    android:onClick="buttonExpandAll"
                    android:padding="20dp"
                    android:text="@string/expand_all" />


            </RelativeLayout>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-1sp"
                android:layout_marginRight="-110dp"
                android:src="@drawable/psfive" />

        </RelativeLayout>

        <!--  4th  -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/purple">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/texture" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/texture" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/baloo"
                    android:padding="10dp"
                    android:text="@string/category_4"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/baloo"
                    android:onClick="buttonExpandAll"
                    android:padding="20dp"
                    android:text="@string/expand_all" />


            </RelativeLayout>

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20sp"
                android:src="@drawable/cloth" />

        </RelativeLayout>

        <!--  5th -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/magenta">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/texture" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:padding="10dp"
                    android:text="@string/category_5"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/baloo"
                    android:onClick="buttonExpandAll"
                    android:padding="20dp"
                    android:text="@string/expand_all" />


            </RelativeLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="50sp"
                android:src="@drawable/books" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>

